--- a/index.html
+++ b/index.html
@@ -34,14 +34,20 @@
     <div class="site-container">
       <main class="main"><section class="hero">
   <div class="hero__content">
-    <img src="./img/logo.svg" alt="Logo Youdes " class="logo visible" />
+    <a href="/index.html" class="logo visible"
+      ><img src="./img/logo.svg" alt="Logo Youdes "
+    /></a>
     <div class="hero__project-upper">
-      <img src="./img/logo.svg" alt="Logo Youdes " class="logo project" />
+      <a href="/index.html" class="logo project"
+        ><img src="./img/logo.svg" alt="Logo Youdes "
+      /></a>
     </div>
     <div class="hero__info padding-sect">
       <header class="header">
         <div class="header-navigation">
-          <img src="./img/logo.svg" alt="Logo Youdes" class="logo" />
+          <a href="/index.html" class="logo"
+            ><img src="./img/logo.svg" alt="Logo Youdes"
+          /></a>
         </div>
       </header>
       <div class="hero__info-container">
@@ -63,8 +69,8 @@
           стильной инфографикой!
         </p>
         <a href="#telegram-popup" data-fancybox class="hero__link"
-          >Обсудить проект <span class="line-to-right"><span></span></span
-        ></a>
+          >Обсудить проект <img src="./img/button-link-icon.svg" alt=""
+        /></a>
       </div>
       <div class="hero__model-container">
         <h2 class="hero__title">
@@ -96,7 +102,6 @@
     <div class="hero__tabs padding-sect">
       <div class="tabs" data-tabs="tab">
         <div class="hero__tabs-upper">
-
           <ul class="tabs__nav">
             <li class="tabs__nav-item">
               <button
@@ -135,8 +140,8 @@
               <p class="hero__desc">
                 Наш дизайн – это баланс минимализма и&nbsp;стиля. Мы создаём
                 инфографикудля маркетплейсов, которая наглядно раскрывает
-                сильные стороны товара, акцентируя внимание на его уникальностии
-                выделяя его среди конкурентов.
+                сильные стороны товара, акцентируя внимание на его уникальности
+                и&nbsp;выделяя его среди конкурентов.
                 <br />
                 <br />
                 Неважно где произведена ваша продукция, мы создадим визуальный
