--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
       </div>
       <div class="hero__model-container">
         <h2 class="hero__title">
-          3D<br />
+          <span>3D</span>
           МОДЕЛИ<br />
           РОВАНИЕ
         </h2>
@@ -82,8 +82,8 @@
           Товар, который хочется купить с первого взгляда! Мы создаем
           фотореалистичные 3D модели товаров с качественными рендерами для
           маркетплейсов.<br /><br />В отличие от обычных фотографий, рендеры
-          позволяют показать товар в лучшем виде,с максимальной детализацией,
-          идеальными ракурсами и точной цветопередачей!
+          позволяют показать товар в лучшем виде, с&nbsp;максимальной
+          детализацией, идеальными ракурсами и точной цветопередачей!
         </p>
         <a href="#telegram-popup" data-fancybox class="hero__link"
           >Обсудить проект <span class="line-to-right"><span></span></span
