--- a/index.html
+++ b/index.html
@@ -34,18 +34,18 @@
     <div class="site-container">
       <main class="main"><section class="hero">
   <div class="hero__content">
-    <a href="/index.html" class="logo visible"
+    <a href="./index.html" class="logo visible"
       ><img src="./img/logo.svg" alt="Logo Youdes "
     /></a>
     <div class="hero__project-upper">
-      <a href="/index.html" class="logo project"
+      <a href="./index.html" class="logo project"
         ><img src="./img/logo.svg" alt="Logo Youdes "
       /></a>
     </div>
     <div class="hero__info padding-sect">
       <header class="header">
         <div class="header-navigation">
-          <a href="/index.html" class="logo"
+          <a href="./index.html" class="logo"
             ><img src="./img/logo.svg" alt="Logo Youdes"
           /></a>
         </div>
