--- a/index.html
+++ b/index.html
@@ -296,18 +296,18 @@
             <div class="swiper info-graph-projects-swiper">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
-                  <a href="">
+                  <div>
                     <img src="./img/9.jpg" alt="" />
-                  </a>
+                  </div>
                 </div>
                 <div class="swiper-slide">
-                  <a href=""> <img src="./img/9.jpg" alt="" /></a>
+                  <div><img src="./img/9.jpg" alt="" /></div>
                 </div>
                 <div class="swiper-slide">
-                  <a href=""> <img src="./img/9.jpg" alt="" /></a>
+                  <div><img src="./img/9.jpg" alt="" /></div>
                 </div>
                 <div class="swiper-slide">
-                  <a href=""> <img src="./img/9.jpg" alt="" /></a>
+                  <div><img src="./img/9.jpg" alt="" /></div>
                 </div>
               </div>
 
