--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
             для&nbsp;маркетплейсов, которая наглядно раскрывает сильные стороны
             товара, акцентируя внимание на его уникальностии выделяя его среди
             конкурентов.
-            <br />
-            <br />
+          </p>
+          <p class="hero__desc">
             Неважно где произведена ваша продукция, мы создадим визуальный
             контент на уровне топовых европейских брендов и подчеркнём её
             преимущества стильной инфографикой!
@@ -85,9 +85,12 @@
           <p class="hero__desc">
             Товар, который хочется купить с первого взгляда! Мы создаем
             фотореалистичные 3D модели товаров с качественными рендерами для
-            маркетплейсов.<br /><br />В отличие от обычных фотографий, рендеры
-            позволяют показать товар в лучшем виде, с&nbsp;максимальной
-            детализацией, идеальными ракурсами и точной цветопередачей!
+            маркетплейсов.
+          </p>
+          <p class="hero__desc">
+            В отличие от обычных фотографий, рендеры позволяют показать товар в
+            лучшем виде, с&nbsp;максимальной детализацией, идеальными ракурсами
+            и точной цветопередачей!
           </p>
           <!--    <a href="#telegram-popup" data-fancybox class="hero__link"
             >Обсудить проект <span class="line-to-right"><span></span></span
@@ -148,11 +151,11 @@
               </h2>
               <p class="hero__desc">
                 Наш дизайн – это баланс минимализма и&nbsp;стиля. Мы создаём
-                инфографикудля маркетплейсов, которая наглядно раскрывает
+                инфографику для маркетплейсов, которая наглядно раскрывает
                 сильные стороны товара, акцентируя внимание на его уникальности
                 и&nbsp;выделяя его среди конкурентов.
-                <br />
-                <br />
+              </p>
+              <p class="hero__desc">
                 Неважно где произведена ваша продукция, мы создадим визуальный
                 контент на уровне топовых европейских брендов и подчеркнём её
                 преимущества стильной инфографикой!
