--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       ><img src="./img/logo.svg" alt="Logo Youdes "
     /></a>
     <div class="hero__project-upper">
-      <a href="./index.html" class="logo project"
+      <a class="logo project home-back"
         ><img src="./img/logo.svg" alt="Logo Youdes "
       /></a>
     </div>
@@ -61,14 +61,14 @@
             инфографику
             <br />
             для&nbsp;маркетплейсов, которая наглядно раскрывает сильные стороны
-            товара, акцентируя внимание на его уникальностии выделяя его среди
-            конкурентов.
-          </p>
-          <p class="hero__desc">
+            товара, акцентируя внимание на его уникальности и&nbsp;выделяя его
+            среди конкурентов.
+            <br /><br />
             Неважно где произведена ваша продукция, мы создадим визуальный
             контент на уровне топовых европейских брендов и подчеркнём её
             преимущества стильной инфографикой!
           </p>
+
           <!--   <a href="#telegram-popup" data-fancybox class="hero__link"
             >Обсудить проект <img src="./img/button-link-icon.svg" alt=""
           /></a> -->
@@ -86,12 +86,13 @@
             Товар, который хочется купить с первого взгляда! Мы создаем
             фотореалистичные 3D модели товаров с качественными рендерами для
             маркетплейсов.
-          </p>
-          <p class="hero__desc">
+            <br />
+            <br />
             В отличие от обычных фотографий, рендеры позволяют показать товар в
             лучшем виде, с&nbsp;максимальной детализацией, идеальными ракурсами
             и точной цветопередачей!
           </p>
+
           <!--    <a href="#telegram-popup" data-fancybox class="hero__link"
             >Обсудить проект <span class="line-to-right"><span></span></span
           ></a> -->
@@ -154,18 +155,18 @@
                 инфографику для маркетплейсов, которая наглядно раскрывает
                 сильные стороны товара, акцентируя внимание на его уникальности
                 и&nbsp;выделяя его среди конкурентов.
-              </p>
-              <p class="hero__desc">
+                <br /><br />
                 Неважно где произведена ваша продукция, мы создадим визуальный
                 контент на уровне топовых европейских брендов и подчеркнём её
                 преимущества стильной инфографикой!
               </p>
+
               <a href="#telegram-popup" data-fancybox class="hero__link"
                 >Обсудить проект <span class="line-to-right"><span></span></span
               ></a>
             </div>
 
-            <div class="swiper info-graph-swiper mobile">
+            <div class="swiper info-graph-swiper mobile first">
               <div class="swiper-wrapper">
                 <div class="swiper-slide">
                   <a href="./img/photo-model-1.png" data-fancybox="gallery"
@@ -382,6 +383,8 @@
               </div>
             </div>
           </div>
+
+          <div class="swiper-navs"></div>
         </div>
       </div>
     </div>
@@ -423,7 +426,7 @@
             вам в Telegram!
           </div>
 
-          <div class="input-group">
+          <div class="input-group name">
             <label for="name">Как Вас зовут?</label>
             <input
               type="text"
@@ -433,7 +436,7 @@
             />
           </div>
 
-          <div class="input-group">
+          <div class="input-group telegram">
             <label for="telegram">Telegram</label>
             <input
               type="text"
