--- a/index.html
+++ b/index.html
@@ -93,9 +93,6 @@
             и точной цветопередачей!
           </p>
 
-          <!--    <a href="#telegram-popup" data-fancybox class="hero__link"
-            >Обсудить проект <span class="line-to-right"><span></span></span
-          ></a> -->
           <button type="button" class="hero__link btn-reset">
             Обсудить проект <img src="./img/button-link-icon.svg" alt="" />
           </button>
@@ -166,9 +163,8 @@
                 </p>
 
                 <a href="#telegram-popup" data-fancybox class="hero__link"
-                  >Обсудить проект
-                  <span class="line-to-right"><span></span></span
-                ></a>
+                  >Обсудить проект <img src="./img/button-link-icon.svg" alt=""
+                /></a>
               </div>
 
               <div class="swiper info-graph-swiper mobile first">
@@ -267,26 +263,30 @@
                   </div>
                 </div>
               </div>
-              <ul class="info-graph-product-list list-reset padding-sect">
+              <ul class="info-graph-product-list list-reset">
                 <li class="info-graph-product-item">
                   <a href="./img/photo-model-1.png" data-fancybox="gallery"
-                    ><img src="./img/photo-model-1.png" alt=""
-                  /></a>
+                    ><!-- <img src="./img/photo-model-1.png" alt=""
+                  /> --></a
+                  >
                 </li>
                 <li class="info-graph-product-item">
                   <a href="./img/photo-model-1.png" data-fancybox="gallery"
-                    ><img src="./img/photo-model-1.png" alt=""
-                  /></a>
+                    ><!-- <img src="./img/photo-model-1.png" alt=""
+                  /> --></a
+                  >
                 </li>
                 <li class="info-graph-product-item">
                   <a href="./img/photo-model-1.png" data-fancybox="gallery"
-                    ><img src="./img/photo-model-1.png" alt=""
-                  /></a>
+                    ><!-- <img src="./img/photo-model-1.png" alt=""
+                  /> --></a
+                  >
                 </li>
                 <li class="info-graph-product-item">
                   <a href="./img/photo-model-1.png" data-fancybox="gallery"
-                    ><img src="./img/photo-model-1.png" alt=""
-                  /></a>
+                    ><!-- <img src="./img/photo-model-1.png" alt=""
+                  /> --></a
+                  >
                 </li>
               </ul>
               <button class="info-graph-more btn-reset">
@@ -357,9 +357,8 @@
                   детализацией, идеальными ракурсами и точной цветопередачей!
                 </p>
                 <a href="#telegram-popup" data-fancybox class="hero__link"
-                  >Обсудить проект
-                  <span class="line-to-right"><span></span></span
-                ></a>
+                  >Обсудить проект <img src="./img/button-link-icon.svg" alt=""
+                /></a>
               </div>
               <div class="swiper model-graph-swiper">
                 <div class="swiper-wrapper">
