--- a/index.html
+++ b/index.html
@@ -123,6 +123,7 @@
               >
                 Инфографика
               </button>
+              <a href="#info-block-anchor"> Инфографика</a>
             </li>
             <li class="tabs__nav-item">
               <button
@@ -131,6 +132,7 @@
               >
                 3D моделирование
               </button>
+              <a href="#model-block-anchor"> 3D моделирование</a>
             </li>
           </ul>
           <div class="hero__tabs-upper-links">
@@ -145,7 +147,7 @@
 
         <div class="tabs__content">
           <div class="tabs__panels">
-            <div class="tabs__panel first">
+            <div class="tabs__panel first" id="info-block-anchor">
               <div class="hero__info-container padding-sect mobile">
                 <h2 class="hero__title">
                   ИНФО<br />
@@ -154,7 +156,7 @@
                 <p class="hero__desc">
                   Наш дизайн – это баланс минимализма и&nbsp;стиля. Мы создаём
                   инфографику для маркетплейсов, которая наглядно раскрывает
-                  сильные стороны товара, акцентируя внимание на его
+                  сильные стороны товара, акцентируя внимание на&nbsp;его
                   уникальности и&nbsp;выделяя его среди конкурентов.
                   <br /><br />
                   Неважно где произведена ваша продукция, мы создадим визуальный
@@ -170,7 +172,7 @@
               <div class="swiper info-graph-swiper mobile first">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <a href="./img/12.jpg" data-fancybox="gallery"
+                    <a href="./img/12.jpg" data-fancybox data-src="./img/12.jpg"
                       ><img src="./img/12.jpg" alt=""
                     /></a>
                     <div class="info-graph-item-bottom">
@@ -183,7 +185,7 @@
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <a href="./img/9.jpg" data-fancybox="gallery"
+                    <a href="./img/9.jpg" data-fancybox data-src="./img/9.jpg"
                       ><img src="./img/9.jpg" alt=""
                     /></a>
                     <div class="info-graph-item-bottom">
@@ -196,7 +198,7 @@
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <a href="./img/10.jpg" data-fancybox="gallery"
+                    <a href="./img/10.jpg" data-fancybox data-src="./img/10.jpg"
                       ><img src="./img/10.jpg" alt=""
                     /></a>
                     <div class="info-graph-item-bottom">
@@ -209,7 +211,7 @@
                     </div>
                   </div>
                   <div class="swiper-slide">
-                    <a href="./img/11.jpg" data-fancybox="gallery"
+                    <a href="./img/11.jpg" data-fancybox data-src="./img/11.jpg"
                       ><img src="./img/11.jpg" alt=""
                     /></a>
                     <div class="info-graph-item-bottom">
@@ -265,25 +267,25 @@
               </div>
               <ul class="info-graph-product-list list-reset">
                 <li class="info-graph-product-item">
-                  <a href="./img/photo-model-1.png" data-fancybox="gallery"
+                  <a href="./img/photo-model-1.png"
                     ><!-- <img src="./img/photo-model-1.png" alt=""
                   /> --></a
                   >
                 </li>
                 <li class="info-graph-product-item">
-                  <a href="./img/photo-model-1.png" data-fancybox="gallery"
+                  <a href="./img/photo-model-1.png"
                     ><!-- <img src="./img/photo-model-1.png" alt=""
                   /> --></a
                   >
                 </li>
                 <li class="info-graph-product-item">
-                  <a href="./img/photo-model-1.png" data-fancybox="gallery"
+                  <a href="./img/photo-model-1.png"
                     ><!-- <img src="./img/photo-model-1.png" alt=""
                   /> --></a
                   >
                 </li>
                 <li class="info-graph-product-item">
-                  <a href="./img/photo-model-1.png" data-fancybox="gallery"
+                  <a href="./img/photo-model-1.png"
                     ><!-- <img src="./img/photo-model-1.png" alt=""
                   /> --></a
                   >
@@ -342,7 +344,7 @@
               </div>
             </div>
 
-            <div class="tabs__panel second">
+            <div class="tabs__panel second" id="model-block-anchor">
               <div class="hero__model-container padding-sect mobile">
                 <h2 class="hero__title">
                   <span>3D</span>
@@ -363,31 +365,38 @@
               <div class="swiper model-graph-swiper">
                 <div class="swiper-wrapper">
                   <div class="swiper-slide">
-                    <a
-                      class="is-desk"
-                      href="./img/photo-model-1.png"
-                      data-fancybox="gallery"
+                    <a class="is-desk" data-fancybox data-src="./img/photo-model-1.png"
                       ><img src="./img/photo-model-1.png" alt=""
                     /></a>
                     <a
                       class="is-mobile"
-                      href="./img/model-3d-1.png"
-                      data-fancybox="gallery"
+                      data-fancybox
+                      data-src="./img/model-3d-1.png"
+
                       ><img src="./img/model-3d-1.png" alt=""
                     /></a>
                   </div>
                   <div class="swiper-slide">
-                    <a href="./img/photo-model-1.png" data-fancybox="gallery"
+                    <a
+
+                      data-fancybox
+                      data-src="../img/photo-model-1.png"
                       ><img src="./img/photo-model-1.png" alt=""
                     /></a>
                   </div>
                   <div class="swiper-slide">
-                    <a href="./img/photo-model-1.png" data-fancybox="gallery"
+                    <a
+
+                      data-fancybox
+                      data-src="./img/photo-model-1.png"
                       ><img src="./img/photo-model-1.png" alt=""
                     /></a>
                   </div>
                   <div class="swiper-slide">
-                    <a href="./img/photo-model-1.png" data-fancybox="gallery"
+                    <a
+                      href="./img/photo-model-1.png"
+                      data-fancybox
+                      data-src="./img/photo-model-1.png"
                       ><img src="./img/photo-model-1.png" alt=""
                     /></a>
                   </div>
